--- a/routes/admin_home.html
+++ b/routes/admin_home.html
@@ -24,7 +24,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="home"><img id="l1" src="/images/t1.png" alt="Autorizz" /></a>
+      <a class="navbar-brand js-scroll-trigger" href="home"><img id="l1" src="/images/logo1.png" alt="Autorizz" /></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
